--- a/_data/releases.json
+++ b/_data/releases.json
@@ -5,7 +5,7 @@
 			"Fixed a crash bug with the error modal"
 		],
 		"downloads": {
-			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v0.7.1-alpha/lavendeux_0.7.1_x64_en-US.zip",
+			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v0.7.1-alpha/lavendeux_0.7.1_x64_en-US.msi.zip",
 			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/v0.7.1-alpha/lavendeux.exe",
 			"github": "https://github.com/rscarson/Lavendeux/releases/tag/v0.7.1-alpha",
 			"source": "https://github.com/rscarson/Lavendeux/archive/v0.7.1-alpha.tar.gz",
