--- a/_data/releases.json
+++ b/_data/releases.json
@@ -1,5 +1,18 @@
 [
 	{
+		"name": "0.7.2-alpha",
+		"changelog": [
+			"Added function assignments, boolean type, and currency values"
+		],
+		"downloads": {
+			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v0.7.2-alpha/lavendeux_0.7.2_x64_en-US.msi.zip",
+			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/v0.7.2-alpha/lavendeux.exe",
+			"github": "https://github.com/rscarson/Lavendeux/releases/tag/v0.7.2-alpha",
+			"source": "https://github.com/rscarson/Lavendeux/archive/v0.7.2-alpha.tar.gz",
+		}
+	},
+
+	{
 		"name": "0.7.1-alpha",
 		"changelog": [
 			"Fixed a crash bug with the error modal"
