--- a/_data/releases.json
+++ b/_data/releases.json
@@ -1,5 +1,18 @@
 [
 	{
+		"name": "0.11.2",
+		"changelog": [
+			"Various visual updates",
+		],
+		"downloads": {
+			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v0.11.2/lavendeux_0.11.2_x64_en-US.msi.zip",
+			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/v0.11.2/lavendeux.exe",
+			"github": "https://github.com/rscarson/Lavendeux/releases/tag/v0.11.2",
+			"source": "https://github.com/rscarson/Lavendeux/archive/v0.11.2.tar.gz"
+		}
+	},
+
+	{
 		"name": "0.11.1",
 		"changelog": [
 			"Various minor bugfixes, mostly visual",
