--- a/_data/releases.json
+++ b/_data/releases.json
@@ -1,5 +1,18 @@
 [
 	{
+		"name": "0.12.0",
+		"changelog": [
+			"Update dependencies and overhaul codebase to enhance testing",
+		],
+		"downloads": {
+			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/0.12.0/lavendeux_0.12.0_x64_en-US.msi.zip",
+			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/0.12.0/lavendeux.exe",
+			"github": "https://github.com/rscarson/Lavendeux/releases/tag/0.12.0",
+			"source": "https://github.com/rscarson/Lavendeux/archive/0.12.0.tar.gz"
+		}
+	},
+	
+	{
 		"name": "0.11.2",
 		"changelog": [
 			"Various visual updates",
