--- a/_data/releases.json
+++ b/_data/releases.json
@@ -1,6 +1,6 @@
 [
 	{
-		"name": "1.0.0-alpha1",
+		"name": "1.0.0-alpha.1",
 		"changelog": [
 			"Ground-up rewrite",
 			"Brand new, more powerful parser",
@@ -9,12 +9,12 @@
 			"Automatic updater"
 		],
 		"downloads": {
-			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha1/lavendeux_1.0.0-alpha1_x64_en-US.msi.zip",
-			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha1/lavendeux.exe",
-			"linux_deb": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha1/lavendeux_1.0.0-alpha1_amd64.deb.zip",
-			"linux_appimage": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha1/lavendeux_1.0.0-alpha1_amd64.appimage.zip",
-			"github": "https://github.com/rscarson/Lavendeux/releases/tag/v1.0.0-alpha1",
-			"source": "https://github.com/rscarson/Lavendeux/archive/v1.0.0-alpha1.tar.gz"
+			"win_install": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha.1/lavendeux_1.0.0-alpha.1_x64_en-US.msi.zip",
+			"win_zip": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha.1/lavendeux.exe",
+			"linux_deb": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha.1/lavendeux_1.0.0-alpha.1_amd64.deb.zip",
+			"linux_appimage": "https://github.com/rscarson/Lavendeux/releases/download/v1.0.0-alpha.1/lavendeux_1.0.0-alpha.1_amd64.appimage.zip",
+			"github": "https://github.com/rscarson/Lavendeux/releases/tag/v1.0.0-alpha.1",
+			"source": "https://github.com/rscarson/Lavendeux/archive/v1.0.0-alpha.1.tar.gz"
 		}
 	},
 
